actualType